Fix z-index and color on single-header-menu

--- a/themes/its-rio/assets/sass/_single.scss
+++ b/themes/its-rio/assets/sass/_single.scss
@@ -125,6 +125,8 @@
     color: black;
     font-weight: bold;
     transform:  translate3d(0px,0px,0px);
+    z-index:9;
+
     @include breakpoint(medium down) {
         position: relative;
     }
